feat: bake Eclipse Temurin OpenJDK 11 into the image (#22)
The IBKR Client Portal Gateway (clientportal.gw) needs Java; its netty-4.1.15
reflectively accesses java.nio.DirectByteBuffer, which is fatal on Java 17+
(bookworm's only apt OpenJDK) but a harmless warning on 11. Pin Temurin
11.0.31+11 from Adoptium's GitHub releases, arch-selected via
dpkg --print-architecture with a per-arch SHA-256 gate (matching the repo's
pinned/integrity-gated build convention).

update-alternatives symlinks java/javac into /usr/bin (already on PATH), so
only JAVA_HOME gets an ENV — the load-bearing final PATH stays untouched.

- Dockerfile: new section 5 (renumbered tail 5/6/7 -> 6/7/8)
- Makefile: smoke asserts Temurin-11.0.31 + JAVA_HOME wiring
- .devcontainer/CLAUDE.md: pinned-artifact inventory + do-NOT-bump-to-17 invariant

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>